--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
             <a href="index.html" class="px-4 py-2 rounded-lg hover:bg-blue-50 hover:text-blue-600 transition">Home</a>
             <a href="#about" class="px-4 py-2 rounded-lg hover:bg-blue-50 hover:text-blue-600 transition">About</a>
             <a href="services.html" class="px-4 py-2 rounded-lg hover:bg-blue-50 hover:text-blue-600 transition">Service</a>
-            <a href="#contact" class="px-4 py-2 rounded-lg hover:bg-blue-50 hover:text-blue-600 transition">Contact</a>
+            <a href="publikasi.htm" class="px-4 py-2 rounded-lg hover:bg-blue-50 hover:text-blue-600 transition">Contact</a>
+            <a href="#contact" class="px-4 py-2 rounded-lg hover:bg-blue-50 hover:text-blue-600 transition">Publikasi</a>
         </div>
 
     </div>
@@ -190,7 +191,7 @@
         <div class="grid md:grid-cols-2 gap-12">
             <!-- Vision Card -->
             <div class="animate-fade-up">
-                <div class="bg-gradient-to-br from-blue-50 to-blue-100 p-10 rounded-2xl shadow-xl border-l-4 border-blue-600 h-full hover-lift">
+                <div class="bg-gradient-to-br from-blue-50 to-blue-50 p-10 rounded-2xl shadow-xl border-l-4 border-blue-300 h-full hover-lift">
                     <div class="flex items-center mb-8">
                         <div class="gradient-bg p-4 rounded-xl mr-6">
                             <i class="fas fa-eye text-white text-3xl"></i>
