--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
             <a href="index.html" class="px-4 py-2 rounded-lg hover:bg-blue-50 hover:text-blue-600 transition">Home</a>
             <a href="#about" class="px-4 py-2 rounded-lg hover:bg-blue-50 hover:text-blue-600 transition">About</a>
             <a href="services.html" class="px-4 py-2 rounded-lg hover:bg-blue-50 hover:text-blue-600 transition">Service</a>
-            <a href="publikasi.htm" class="px-4 py-2 rounded-lg hover:bg-blue-50 hover:text-blue-600 transition">Contact</a>
-            <a href="#contact" class="px-4 py-2 rounded-lg hover:bg-blue-50 hover:text-blue-600 transition">Publikasi</a>
+            <a href="publikasi.html" class="px-4 py-2 rounded-lg hover:bg-blue-50 hover:text-blue-600 transition">Publikasi</a>
+            <a href="index.html#contact" class="px-4 py-2 rounded-lg hover:bg-blue-50 hover:text-blue-600 transition">Contact</a>
         </div>
 
     </div>
